24-11-2017

- Version 2.0.9

- PERF: faster serialization of messages

06-10-2017

- Version 2.0.8

- Fix: Make redis readonly detection more robust

02-10-2017

- Version 2.0.7

- Fix/Feature: use LUA script for publishing to bus, this eliminates a race condition
   and ensures that we are never stuck in a multi transaction by mistake


29-09-2017

- Version 2.0.6

- Fix: correct after_fork so it correctly disconnnects redis
- Fix: correct message_bus #destroy used in tests to clean up spec (deadlock)
- Fix: deliver backlog unconditionally when polling (and not long polling)

16-08-2017

- Version 2.0.5

- Quick fix, build on earlier version of Ruby cause https://github.com/rubygems/rubygems/issues/1448 is still open

- Version 2.0.3
- Fix: broken MessageBus.redis_config
- Perf: publish status message for filtered messages
- Perf: add frozen strings to save on memory
- Feature: improved logging when messages are dropped
- Fix: handle missing actiondispatch flash

25-08-2016

- Version 2.0.2
- Feature: Add on_middleware_error callback for remapping middleware errors to HTTP results


25-07-2016

- Feature: Add JavaScript MessageBus.status() function


21-06-2016

- Version 2.0.1
- Fix: build using old ruby cause new ruby breaks stuff @sam

21-06-2016

- Version 2.0.0
- Fix: forked process terminates parent more cleanly (does not kill -9 parent if already terminated) @uri
- Fix: add async true explicitly on ajax reqs to ensure it always works even if disabled by globally @washu

11-05-2016

- Version 2.0.0.beta.11
- Fix: for https://github.com/rubygems/rubygems/issues/1448 which is still broken, build under Ruby 2.0

11-05-2016

- Version 2.0.0.beta.10
- Fix: for https://github.com/rubygems/rubygems/issues/1448

11-05-2016

- Version 2.0.0.beta.9
- Fix: requests without content type were erroring out, breaks CORS

27-04-2016

- Version 2.0.0.beta.8
- Fix: exception raised sometimes when subscribing at a particular position

26-04-2016

- Version 2.0.0.beta.7
