@@ -1,4 +1,4 @@
 # frozen_string_literal: true
 module MessageBus
-  VERSION = "2.0.8"
+  VERSION = "2.0.9"
 end
